build/log/idf_py_stdout_output_95839
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] cd /Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/build/bootloader/esp-idf/esptool_py && /Users/alfred/.espressif/tools/python_env/idf5.5_py3.9_env/bin/python /Users/alfred/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/build/bootloader/bootloader.bin
Bootloader binary size 0x5b70 bytes. 0x2490 bytes (29%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/web_server_task/CMakeFiles/__idf_web_server_task.dir/web_server_task.c.obj
FAILED: esp-idf/web_server_task/CMakeFiles/__idf_web_server_task.dir/web_server_task.c.obj 
/Users/alfred/.espressif/tools/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_MDNS_VERSION_NUMBER=\"1.8.2\" -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/build/config -I/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/components/web_server_task/include -I/Users/alfred/esp-idf/components/newlib/platform_include -I/Users/alfred/esp-idf/components/freertos/config/include -I/Users/alfred/esp-idf/components/freertos/config/include/freertos -I/Users/alfred/esp-idf/components/freertos/config/riscv/include -I/Users/alfred/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/alfred/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/Users/alfred/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/Users/alfred/esp-idf/components/freertos/esp_additions/include -I/Users/alfred/esp-idf/components/esp_hw_support/include -I/Users/alfred/esp-idf/components/esp_hw_support/include/soc -I/Users/alfred/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/Users/alfred/esp-idf/components/esp_hw_support/dma/include -I/Users/alfred/esp-idf/components/esp_hw_support/ldo/include -I/Users/alfred/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/alfred/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/Users/alfred/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/Users/alfred/esp-idf/components/esp_hw_support/power_supply/include -I/Users/alfred/esp-idf/components/esp_hw_support/port/esp32c6/. -I/Users/alfred/esp-idf/components/esp_hw_support/port/esp32c6/include -I/Users/alfred/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/Users/alfred/esp-idf/components/heap/include -I/Users/alfred/esp-idf/components/heap/tlsf -I/Users/alfred/esp-idf/components/log/include -I/Users/alfred/esp-idf/components/soc/include -I/Users/alfred/esp-idf/components/soc/esp32c6 -I/Users/alfred/esp-idf/components/soc/esp32c6/include -I/Users/alfred/esp-idf/components/soc/esp32c6/register -I/Users/alfred/esp-idf/components/hal/platform_port/include -I/Users/alfred/esp-idf/components/hal/esp32c6/include -I/Users/alfred/esp-idf/components/hal/include -I/Users/alfred/esp-idf/components/esp_rom/include -I/Users/alfred/esp-idf/components/esp_rom/esp32c6/include -I/Users/alfred/esp-idf/components/esp_rom/esp32c6/include/esp32c6 -I/Users/alfred/esp-idf/components/esp_rom/esp32c6 -I/Users/alfred/esp-idf/components/esp_common/include -I/Users/alfred/esp-idf/components/esp_system/include -I/Users/alfred/esp-idf/components/esp_system/port/soc -I/Users/alfred/esp-idf/components/esp_system/port/include/riscv -I/Users/alfred/esp-idf/components/esp_system/port/include/private -I/Users/alfred/esp-idf/components/riscv/include -I/Users/alfred/esp-idf/components/lwip/include -I/Users/alfred/esp-idf/components/lwip/include/apps -I/Users/alfred/esp-idf/components/lwip/include/apps/sntp -I/Users/alfred/esp-idf/components/lwip/lwip/src/include -I/Users/alfred/esp-idf/components/lwip/port/include -I/Users/alfred/esp-idf/components/lwip/port/freertos/include -I/Users/alfred/esp-idf/components/lwip/port/esp32xx/include -I/Users/alfred/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/alfred/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/components/freertos_chess/include -I/Users/alfred/esp-idf/components/driver/deprecated -I/Users/alfred/esp-idf/components/driver/i2c/include -I/Users/alfred/esp-idf/components/driver/touch_sensor/include -I/Users/alfred/esp-idf/components/driver/twai/include -I/Users/alfred/esp-idf/components/esp_pm/include -I/Users/alfred/esp-idf/components/esp_ringbuf/include -I/Users/alfred/esp-idf/components/esp_driver_gpio/include -I/Users/alfred/esp-idf/components/esp_driver_pcnt/include -I/Users/alfred/esp-idf/components/esp_driver_gptimer/include -I/Users/alfred/esp-idf/components/esp_driver_spi/include -I/Users/alfred/esp-idf/components/esp_driver_mcpwm/include -I/Users/alfred/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/alfred/esp-idf/components/esp_driver_i2s/include -I/Users/alfred/esp-idf/components/esp_driver_sdmmc/include -I/Users/alfred/esp-idf/components/sdmmc/include -I/Users/alfred/esp-idf/components/esp_driver_sdspi/include -I/Users/alfred/esp-idf/components/esp_driver_sdio/include -I/Users/alfred/esp-idf/components/esp_driver_dac/include -I/Users/alfred/esp-idf/components/esp_driver_rmt/include -I/Users/alfred/esp-idf/components/esp_driver_tsens/include -I/Users/alfred/esp-idf/components/esp_driver_sdm/include -I/Users/alfred/esp-idf/components/esp_driver_i2c/include -I/Users/alfred/esp-idf/components/esp_driver_uart/include -I/Users/alfred/esp-idf/components/vfs/include -I/Users/alfred/esp-idf/components/esp_driver_ledc/include -I/Users/alfred/esp-idf/components/esp_driver_parlio/include -I/Users/alfred/esp-idf/components/esp_driver_usb_serial_jtag/include -I/Users/alfred/esp-idf/components/esp_driver_twai/include -I/Users/alfred/esp-idf/components/esp_timer/include -I/Users/alfred/esp-idf/components/nvs_flash/include -I/Users/alfred/esp-idf/components/esp_partition/include -I/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/components/button_task/include -I/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/components/led_task/include -I/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/managed_components/espressif__led_strip/include -I/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/managed_components/espressif__led_strip/interface -I/Users/alfred/esp-idf/components/esp_wifi/include -I/Users/alfred/esp-idf/components/esp_wifi/include/local -I/Users/alfred/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/alfred/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/alfred/esp-idf/components/esp_event/include -I/Users/alfred/esp-idf/components/esp_phy/include -I/Users/alfred/esp-idf/components/esp_phy/esp32c6/include -I/Users/alfred/esp-idf/components/esp_netif/include -I/Users/alfred/esp-idf/components/esp_http_server/include -I/Users/alfred/esp-idf/components/http_parser -I/Users/alfred/esp-idf/components/json/cJSON -I/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/components/timer_system/include -I/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/components/config_manager/include -I/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/components/game_task/include -I/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/components/game_led_animations/include -I/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/components/enhanced_castling_system/include -I/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/components/game_hooks/include -I/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/components/ble_task/include -I/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/managed_components/espressif__mdns/include -I/Users/alfred/esp-idf/components/console -I/Users/alfred/esp-idf/components/esp_vfs_console/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA=. -fmacro-prefix-map=/Users/alfred/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/web_server_task/CMakeFiles/__idf_web_server_task.dir/web_server_task.c.obj -MF esp-idf/web_server_task/CMakeFiles/__idf_web_server_task.dir/web_server_task.c.obj.d -o esp-idf/web_server_task/CMakeFiles/__idf_web_server_task.dir/web_server_task.c.obj -c /Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/components/web_server_task/web_server_task.c
/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/components/web_server_task/web_server_task.c: In function 'web_server_ble_command_dispatch':
/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/components/web_server_task/web_server_task.c:2671:56: error: 'root' undeclared (first use in this function)
 2671 |     cJSON *from_obj = cJSON_GetObjectItemCaseSensitive(root, "from");
      |                                                        ^~~~
/Users/alfred/Documents/my_local_projects/free_chess_v1_mqtt_HA/components/web_server_task/web_server_task.c:2671:56: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
